# AzureSimpleRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/core/: config.py  db.py  foundry.py  integration_errors.py
app/models/: schemas.py
app/routers/: analytics.py  articles.py  chat.py  ingest.py  pages.py  search.py
app/services/: analytics.py  articles.py  chunker.py  embeddings.py  ingestion.py  parser.py  rag.py  search_service.py
app/static/: styles.css
app/templates/: admin_analytics.html  admin_articles.html  admin_new_article.html  article.html  ask.html  base.html  home.html  search.html
sample_docs/: azure-architecture-overview.md  getting-started.md
scripts/: deploy_container_app.ps1  push_image.ps1  setup_azure.sh
tests/: test_smoke.py
